Keeping deps in dist.ini to be auto-generated

--- a/dist.ini
+++ b/dist.ini
@@ -1,7 +1,8 @@
 name    = Task-BeLike-CADAVIS
-author  = Chad A. Davis <chad.a.davis@gmail.com>
+version = 20111013
+author  = Chad A Davis <chad.a.davis@gmail.com>
 license = Perl_5
-copyright_holder = Chad A. Davis
+copyright_holder = Chad A Davis
 copyright_year   = 2011
 
 ; Plugin setup inspired by:
@@ -21,7 +22,7 @@ copyright_year   = 2011
 [Readme]
 
 ; t tests
-[CompileTests]      ; make sure .pm files all compile
+[Test::Compile]      ; make sure .pm files all compile
 [ExtraTests]
 ;[CriticTests]
 ;[PodCoverageTests]
@@ -32,7 +33,53 @@ fake_home = 1       ; fakes $ENV{HOME} just in case
 [MinimumPerl]       ; determine minimum perl version
 [AutoPrereqs]       ; find prereqs from code
 [Prereqs]           ; Any additional explicit prereqs here
-; Some::Module = 1.2.3
+
+; First, submit test reports
+Task::CPAN::Reporter = 0
+; Other testing
+Test::Class = 0
+Test::Approx = 0
+
+; Basic CPAN setup (plus readline)
+Bundle::CPAN = 0
+
+; Bunch of modern tools
+;Task::Kensho = 0
+; cpanm, local::lib
+Task::Kensho::Toolchain = 0
+; Test::Most, Devel::Cover, etc
+Task::Kensho::Testing = 0
+; Try::Tiny, TryCatch, autodie
+Task::Kensho::Exceptions = 0
+; Task::Moose
+Task::Kensho::OOP = 0
+; DBI, DBD::SQLite, DBIC, Schema::Loader, etc
+Task::Kensho::DVDev = 0
+Class::DBI = 0
+DBD::mysql = 0
+; perltidy, perlcritic, NYTProf, dzil, etc
+Task::Kensho::ModuleDev = 0
+; More Author tools
+Task::Dist::Zilla = 0
+; CHI
+Task::Kensho::Scalability = 0
+; re.pl, ack, nopaste, corelist, perlbrew
+Task::Kensho::CLI = 0
+; Smart::Comments, IO::All
+Task::Kensho::Hackery = 0
+
+; Catalyst includes Catalyst::Devel
+; Also in Task::Kensho::WebDev
+Task::Catalyst = 0
+
+;Task::Dancer = 0
+
+; Misc
+Sort::Key = 0
+PDL = 0
+Log::Any = 0
+Mason = 0
+
 
 ; source control
 ;[Subversion::Tag]   ; Tag subversion releases
@@ -52,7 +99,8 @@ issues = 1
 
 ; Build system
 ;[MakeMaker]         ; create Makefile.PL
-[ModuleBuild]
+;[ModuleBuild]
+[ModuleInstall]
 
 ; manifest (after all generated files)
 [Manifest]          ; create MANIFEST
