Itemized dzil plugins, rather than Task::Dist::Zilla

--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = Task-BeLike-CADAVIS
-version = 20111013
+version = 20111014
 author  = Chad A Davis <chad.a.davis@gmail.com>
 license = Perl_5
 copyright_holder = Chad A Davis
@@ -54,13 +54,11 @@ Task::Kensho::Exceptions = 0
 ; Task::Moose
 Task::Kensho::OOP = 0
 ; DBI, DBD::SQLite, DBIC, Schema::Loader, etc
-Task::Kensho::DVDev = 0
+Task::Kensho::DBDev = 0
 Class::DBI = 0
-DBD::mysql = 0
+;DBD::mysql = 0
 ; perltidy, perlcritic, NYTProf, dzil, etc
 Task::Kensho::ModuleDev = 0
-; More Author tools
-Task::Dist::Zilla = 0
 ; CHI
 Task::Kensho::Scalability = 0
 ; re.pl, ack, nopaste, corelist, perlbrew
@@ -80,6 +78,33 @@ PDL = 0
 Log::Any = 0
 Mason = 0
 
+; More Author tools
+; Dist-Zilla-Plugin-JSAN broken due to Getopt-LL
+;Task::Dist::Zilla = 0
+Dist::Zilla::Plugin::ShareDir = 0
+Dist::Zilla::Plugin::FakeRelease = 0
+Dist::Zilla::Plugin::PodVersion = 0
+Dist::Zilla::Plugin::MinimumPerl = 0
+Dist::Zilla::Plugin::ConfirmRelease = 0
+Dist::Zilla::Plugin::ModuleInstall = 0
+Dist::Zilla::Plugin::Prereqs = 0
+Dist::Zilla::Plugin::TestRelease = 0
+Dist::Zilla::Plugin::GithubMeta = 0
+Dist::Zilla::Plugin::CheckChangesHasContent = 0
+Dist::Zilla::Plugin::MetaYAML = 0
+Dist::Zilla::Plugin::PodWeaver = 0
+Dist::Zilla::Plugin::License = 0
+Dist::Zilla::Plugin::Readme = 0
+Dist::Zilla::Plugin::AutoPrereqs = 0
+Dist::Zilla::Plugin::NextRelease = 0
+Dist::Zilla::Plugin::Manifest = 0
+Dist::Zilla::Plugin::GatherDir = 0
+Dist::Zilla::Plugin::ExtraTests = 0
+Dist::Zilla::Plugin::PkgVersion = 0
+Dist::Zilla::Plugin::MetaJSON = 0
+Dist::Zilla::Plugin::Test::Compile = 0
+Dist::Zilla::Plugin::CheckPrereqsIndexed = 0
+Dist::Zilla::Plugin::ExecDir = 0
 
 ; source control
 ;[Subversion::Tag]   ; Tag subversion releases
